<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="TDD_Ex" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="oDx-ff-ZKl">
                                <rect key="frame" x="95" y="292" width="200" height="260"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" restorationIdentifier="idTextField" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4qH-GT-lbt" userLabel="idTextField">
                                        <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="idTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" id="IXv-dV-pO5"/>
                                            <constraint firstAttribute="width" constant="200" id="K6X-RF-OgD"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" restorationIdentifier="pwTextField" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wsv-GU-kXc" userLabel="pwTextField">
                                        <rect key="frame" x="0.0" y="160" width="200" height="100"/>
                                        <accessibility key="accessibilityConfiguration" identifier="pwTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="5Er-5a-83T"/>
                                            <constraint firstAttribute="height" constant="100" id="prX-IO-Rj0"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="loginButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7cR-PH-Ywq">
                                <rect key="frame" x="157.66666666666666" y="227.66666666666666" width="75" height="34.333333333333343"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
                                <connections>
                                    <action selector="didTapLoginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zbf-PZ-gCy"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="7cR-PH-Ywq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8Fa-CG-WL1"/>
                            <constraint firstItem="oDx-ff-ZKl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="WsY-V5-370"/>
                            <constraint firstItem="oDx-ff-ZKl" firstAttribute="top" secondItem="7cR-PH-Ywq" secondAttribute="bottom" constant="30" id="XVz-fm-ejH"/>
                            <constraint firstItem="oDx-ff-ZKl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="d5W-UI-bqK"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="idTextField" destination="wsv-GU-kXc" id="tOE-UL-L2U"/>
                        <outlet property="pwTextField" destination="wsv-GU-kXc" id="xai-QF-dOv"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-83.07692307692308" y="3.5545023696682461"/>
        </scene>
        <!--Home View Controller-->
        <scene sceneID="Wec-Fx-OAd">
            <objects>
                <viewController storyboardIdentifier="HomeViewController" id="Ro7-nh-UvR" customClass="HomeViewController" customModule="TDD_Ex" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ztm-wN-ljJ">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="eQJ-Pf-pyA"/>
                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wEp-vz-S6I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="860" y="4"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemYellowColor">
            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
